force-app/main/default/objects/Material_Inventory_Item__c/fields/Inventory_Date__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Inventory Date</label>
    <type>Date</type>
</CustomField>