force-app/main/default/objects/Material_Inventory_Item__c/fields/Material_Item__c.field-meta.xml
<CustomField>
    <fullName>Material_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material Item</label>
    <referenceTo>Material_Item__c</referenceTo>
    <relationshipLabel>Material Inventory Items</relationshipLabel>
    <relationshipName>Material_Inventory_Items</relationshipName>
    <type>Lookup</type>
</CustomField>