force-app/main/default/objects/Material_Inventory_Item__c/fields/Qty_On_Hand_temp__c.field-meta.xml
<CustomField>
    <fullName>Qty_On_Hand_temp__c</fullName>
    <label>Qty On Hand temp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>