force-app/main/default/objects/Material_Inventory_Item__c/fields/Qty_On_Shelf__c.field-meta.xml
<CustomField>
    <fullName>Qty_On_Shelf__c</fullName>
    <label>Qty On Shelf</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>